Version 2.02.64 -
=================================
  Disallow the addition of mirror images while a conversion is happening.
  Disallow primary mirror image removal when mirror is not in-sync.
  Remove obsolete --name parameter from vgcfgrestore.
  Add -S command to clvmd to restart the daemon preserving exclusive locks.
  Increment lvm2app version from 1 to 2.
  Change lvm2app memory alloc/free for pv/vg/lv properties.
  Change daemon lock filename from lvm2_monitor to lvm2-monitor for consistency.
  Added awk script relpath.awk to calculate relative paths.
  Fix double DESTDIR usage for infodir and mandir.
  Install symbolic .so links with relative paths between usrlibdir and libdir.

Version 2.02.63 - 14th April 2010
=================================
  Rename lvm_dump.sh to lvmdump.sh.
  Allow incomplete mirror restore in lvconvert --repair upon insufficient space.
  Do not reset position in metadata ring buffer on vgrename and vgcfgrestore.
  Allow VGs with active LVs to be renamed.
  Use UUIDs instead of names while processing event handlers.
  Only pass visible LVs to tools in cmdline VG name/tag expansions without -a.
  Use typedefs for toollib process_each functions.
  Use C locales and use_mlockall for clvmd.
  Refactor code related to vg->pvs list and add pv->vg link.
  Mask LCK_HOLD flag in cluster VG locks for backwards compatibility.
  Add activation/polling_interval to lvm.conf as --interval default.
  Don't ignore error if resuming any LV fails in resume_lvs.
  Skip closing persistent filter cache file if open failed.
  Install .a and .so links into $(usrlibdir).
  Add --enable-write_install options to install user-writable files.
  Use INSTALL_PROGRAM/DATA/WDATA target.
  Switch from using VPATH  to vpath in Makefiles.
  Permit mimage LVs to be striped in lvcreate, lvresize and lvconvert.
  Fix pvmove allocation to take existing parallel stripes into account.
  Add pvmove_source_seg to struct lv_segment.